added site metadata

--- a/src/app.html
+++ b/src/app.html
@@ -2,7 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<!-- <link rel="stylesheet" href="https://use.typekit.net/bri8bch.css"> -->
+		<meta property="og:title" content="Aguayos" />
+		<meta property="og:description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean." />
+		<meta property="og:image" content="/preview.png" />
+		<meta property="og:url" content="https://aguayos.netlify.app/" />
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="Aguayos" />
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@800&display=swap" rel="stylesheet">
