--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,18 @@
+<script>
+  export const prerender = true;
+</script>
 <!doctype html>
 <html lang="en">
+	<svelte:head>
 	<head>
 		<meta charset="utf-8" />
+		<meta name="title" content="Aguayos">
+		<meta name="description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean through data visualization.">
+  		<meta name="keywords" content="data visualization, dataviz, migration, latin america, un data">
+  		<meta name="author" content="Mariana Villamizar">
+  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Aguayos" />
-		<meta property="og:description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean." />
+		<meta property="og:description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean through data visualization." />
 		<meta property="og:image" content="/preview.png" />
 		<meta property="og:url" content="https://aguayos.netlify.app/" />
 		<meta property="og:type" content="website" />
@@ -14,6 +23,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
+	</svelte:head>
 	<body data-sveltekit-preload-data="hover">
 		<div id=""root>%sveltekit.body%</div>
 	</body>
