Fixing metadata for link preview

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,8 @@
-<script>
-  export const prerender = true;
-</script>
 <!doctype html>
 <html lang="en">
-	<svelte:head>
 	<head>
+		<title>Aguayos</title>
 		<meta charset="utf-8" />
-		<meta name="title" content="Aguayos">
 		<meta name="description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean through data visualization.">
   		<meta name="keywords" content="data visualization, dataviz, migration, latin america, un data">
   		<meta name="author" content="Mariana Villamizar">
@@ -23,7 +19,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	</svelte:head>
 	<body data-sveltekit-preload-data="hover">
 		<div id=""root>%sveltekit.body%</div>
 	</body>
