Fixing metadata for link preview

--- a/src/app.html
+++ b/src/app.html
@@ -9,7 +9,7 @@
   		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Aguayos" />
 		<meta property="og:description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean through data visualization." />
-		<meta property="og:image" content="./preview.png" />
+		<meta property="og:image" content="preview.png" />
 		<meta property="og:url" content="https://aguayos.netlify.app/" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Aguayos" />
