Fixing metadata for link preview

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,10 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Aguayos</title>
+		<title>Aguayos: Exploring the beauty of migratory flows within Latin America and the Caribbean</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean through data visualization.">
+		<meta name="description" content="This project visualizes migration across Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people.">
   		<meta name="keywords" content="data visualization, dataviz, migration, latin america, un data">
-  		<meta name="author" content="Mariana Villamizar">
-  		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Aguayos" />
 		<meta property="og:description" content="Exploring the beauty of migratory flows within Latin America and the Caribbean through data visualization." />
 		<meta property="og:image" content="preview.png" />
