--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
 	<head>
-		<title>Aguayos: Exploring the beauty of migratory flows within Latin America and the Caribbean</title>
+		<title>Aguayos: Exploring the beauty of migratory flows</title>
 		<meta charset="utf-8" />
 		<meta name="description" content="This project visualizes migration across Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people.">
   		<meta name="keywords" content="data visualization, dataviz, migration, latin america, un data">
-		<meta property="og:title" content="Aguayos: Exploring the beauty of migratory flows within Latin America and the Caribbean" />
-		<meta property="og:description" content="This project visualizes migration across Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people." />
+		<meta property="og:title" content="Aguayos: Exploring the beauty of migratory flow" />
+		<meta property="og:description" content="This project visualizes migration within Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people." />
 		<meta property="og:image" content="https://aguayos.netlify.app/preview.png" />
 		<meta property="og:url" content="https://aguayos.netlify.app/" />
 		<meta property="og:type" content="website" />
