Fixing metadata for link preview

--- a/src/app.html
+++ b/src/app.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Aguayos: Exploring the beauty of migratory flows</title>
 		<meta charset="utf-8" />
-		<meta name="description" content="This project visualizes migration across Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people.">
+		<meta name="description" content="This project visualizes migration within Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people.">
   		<meta name="keywords" content="data visualization, dataviz, migration, latin america, un data">
 		<meta property="og:title" content="Aguayos: Exploring the beauty of migratory flow" />
 		<meta property="og:description" content="This project visualizes migration within Latin America and the Caribbean with mirrored charts inspired by traditional Andean weavings made by the Aymara people." />
